--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -72,6 +72,7 @@
 		border-radius: 15px;
 		color: #FFFFFF;
 		font-size: 16px;
+		transition: all 0.3s ease 0s;
 		&:hover {
 			background: #FFFFFF;
 			border: 1px dashed #00AEC7;
