--- a/src/style/terms.scss
+++ b/src/style/terms.scss
@@ -69,12 +69,14 @@
 	.terms {
 		&__prev {
 			display: block;
+			cursor: pointer;
 			&.swiper-button-disabled > svg {
 				fill-opacity: 0.3;
 			}
 		}
 		&__next {
 			display: block;
+			cursor: pointer;
 			&.swiper-button-disabled > svg {
 				fill-opacity: 0.3;
 			}
