--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -71,3 +71,11 @@ body {
 		filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 	}
 }
+
+[class*="__next"]:not(.swiper-button-disabled) {
+	cursor: pointer;
+}
+
+[class*="__prev"]:not(.swiper-button-disabled) {
+	cursor: pointer;
+}
