--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
 @import './style/preloader.scss';
 @import './style/fonts.scss';
 @import './style/var.scss';
+@import './style/anims/anims.scss';
 @import './style/global.scss';
+@import './style/swiper.scss';
 @import './style/header.scss';
 @import './style/about.scss';
 @import './style/terms.scss';
