--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -1,23 +1,34 @@
 .about {
 	margin-top: 30px;
+	&__container {
+		opacity: 0;
+		transform: scale(0) translate(-100%);
+		display: flex;
+		flex-direction: column;
+	}
 	&__picture {
-		margin-right: auto;
-		width: 254px;
-		height: 313px;
+		position: relative;
+		padding-top: 116%;
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
 		& img {
 			position: relative;
-			top: -6%;
-			left: 0%;
+			top: -7%;
 			width: 100%;
-			height: 130%;
+			height: 131%;
 			object-fit: cover;
 			object-position: 73%;
 		}
 	}
 
 	&__mask {
+		top: 0;
+		left: -3%;
+		position: absolute;
 		mask-image: url('./assets/img/about/about__mask.svg');
 		mask-size: 100% 100%;
+		mask-repeat: no-repeat;
 		width: 100%;
 		height: 100%;
 	}
@@ -27,9 +38,9 @@
 	}
 
 	&__content {
-		padding-left: 12px;
+		padding: 0 12px;
 		&:not(:first-child) {
-			margin-top: 20px;
+			margin-top: 34px;
 		}
 	}
 
@@ -44,15 +55,13 @@
 			color: $highlight;
 		}
 		& + [class*='__text'] {
-			margin-top: 20px;
+			margin-top: 6px;
 		}
 	}
 }
 @media only screen and (min-width: 500.98px) {
 	.about {
 		&__picture {
-			width: 300px;
-			height: 367px;
 		}
 		&__title {
 			font-size: 24px;
@@ -62,10 +71,11 @@
 @media only screen and (min-width: 767.98px) {
 	.about {
 		&__container {
-			display: flex;
+			flex-direction: row;
 		}
 		&__picture {
 			flex: 42%;
+			padding-top: 52%;
 		}
 		&__body {
 			flex: 58%;
@@ -76,19 +86,19 @@
 		}
 	}
 }
-@media only screen and (min-width: 1279px) {
+@media only screen and (min-width: 1299px) {
 	.about {
-		margin-bottom: -10%;
-		&__picture {
-			width: 524px;
-			height: 646px;
+		margin-bottom: -179px;
+		&__mask {
+			left: 0%;
 		}
 		&__body {
 			align-items: center;
 			margin-top: -100px;
 		}
 		&__content {
-			width: 529px;
+			width: 585px;
+			margin: -22px 0 0 -56px;
 		}
 	}
 }
