--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -9,8 +9,14 @@
 	}
 	&__swiper {
 	}
+	&__slide {
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		overflow: hidden;
+	}
 	&__content {
-		padding-left: 12px;
+		padding-right: 25px;
 	}
 	&__subtitle {
 		font-size: 16px;
@@ -22,42 +28,48 @@
 		margin-top: 16px;
 	}
 	&__picture {
+		padding-top: 100%;
 		position: relative;
-		width: 244px;
-		height: 261px;
-		margin: 10px 0 0 auto;
+		width: 100%;
+		height: 53%;
+		user-select: none;
 		& img {
 			position: relative;
-			width: 120%;
+			top: 1px;
+			right: -7px;
+			width: 100%;
 			height: 120%;
 			object-fit: cover;
-			object-position: 60% 0;
 		}
 	}
 	&__mask {
 		position: absolute;
 		z-index: 3;
-		top: 0;
-		left: 8px;
+		top: 6px;
+		left: 7%;
 		mask-image: url('./assets/img/footer/footer__mask.svg');
 		mask-size: 100% 100%;
+		mask-repeat: no-repeat;
 		width: 100%;
-		height: 100%;
+		height: 97%;
 	}
 	&__background {
 		position: absolute;
+		top: 12%;
+		left: 10%;
 		z-index: 2;
 		width: 100%;
 		height: 100%;
 		background-color: $highlight;
 		mask-image: url('./assets/img/footer/footer__background.svg');
 		mask-repeat: no-repeat;
-		mask-size: 100%;
+		mask-size: 90%;
 	}
 	&__swiper-pagination {
 		display: flex;
 		justify-content: center;
-		margin-top: 21px;
+		margin: 0 auto;
+		padding-top: 25px;
 	}
 	&__controls {
 		display: none;
@@ -67,32 +79,30 @@
 @media only screen and (min-width: 500.98px) {
 	.footer {
 		&__picture {
-			width: 344px;
-			height: 361px;
 		}
 		&__background {
-			top: 31px;
-			left: -5px;
 		}
 	}
 }
 @media only screen and (min-width: 767.98px) {
 	.footer {
 		&__slide {
-			display: flex;
-			align-items: center;
+			flex-direction: row;
+		}
+		&__subtitle {
+			width: 100%;
 		}
 		&__picture {
 			flex: 48.5%;
+			align-self: center;
 			margin-top: 0;
-			height: 370px;
+			padding-top: 50%;
 		}
 		&__content {
 			flex: 51.5%;
 		}
-		&__background {
-			top: 31px;
-			left: 0px;
+		&__mask {
+			left: 5.5%;
 		}
 	}
 }
@@ -101,6 +111,14 @@
 		&__swiper-pagination {
 			display: none;
 		}
+		&__content {
+			display: flex;
+			align-items: center;
+		}
+		&__position {
+			margin: 40px auto 0 auto;
+			max-width: 626px;
+		}
 		&__controls {
 			margin-top: 49px;
 			display: flex;
@@ -108,37 +126,44 @@
 		}
 		&__prev {
 			display: block;
-			&.swiper-button-disabled > svg {
-				fill-opacity: 0.3;
-			}
 		}
 		&__next {
 			display: block;
-			&.swiper-button-disabled > svg {
-				fill-opacity: 0.3;
-			}
 		}
 		&__picture {
-			width: 447px;
-			height: 499px;
 		}
 		&__subtitle {
 			width: 253px;
 		}
+		&__swiper-pagination {
+			display: none;
+		}
+		&__controls {
+			justify-content: flex-start;
+		}
+		&__text  {
+			line-height: 1.4;
+		}
 	}
 }
-@media only screen and (min-width: 1279px) {
+@media only screen and (min-width: 1299px) {
 	.footer {
-		&__text {
-			width: 606px;
+		margin-top: 24px;
+		&__content {
+			flex: 70.5%;
 		}
 		&__picture {
-			width: 469px;
-			left: 60px;
+			flex: 41%;
+			padding-top: 41%;
+		}
+		&__mask {
+			left: 1.7%;
 		}
 		&__background {
-			mask-size: 80%;
-			mask-position: 45px 10px;
+			mask-size: 102%;
+			mask-position: 0px 0px;
+			top: 10%;
+			left: -2%;
 		}
 	}
 }
