--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,15 +1,23 @@
 @import './nullstyle.scss';
 
-:root {
-	--swiper-theme-color: #2DB5D3 !important;
-}
-
 body {
 	font-family: 'Trebuchet MS';
 	font-weight: 400;
 	font-size: 14px;
-	line-height: 1.4;
+	line-height: 1.43;
 	color: $mainColor;
+}
+
+@media only screen and (min-width: 500.98px) {
+	body {
+		font-size: 16px;
+	}
+}
+
+@media only screen and (min-width: 1299px) {
+	body {
+		line-height: 1.4;
+	}
 }
 
 .wrapper {
@@ -25,10 +33,9 @@ body {
 	overflow: hidden;
 }
 
-@media only screen and (min-width: 500.98px) {
-	body {
-		font-size: 16px;
-	}
+.header, .main, .footer {
+	position: relative;
+	z-index: 2;
 }
 
 /*TABLET*/
@@ -46,9 +53,9 @@ body {
 }
 
 /*PC*/
-@media only screen and (min-width: 1279px) {
+@media only screen and (min-width: 1299px) {
 	[class*="__container"] {
-		max-width: 1249px;
+		max-width: 1299px;
 	}
 }
 
@@ -59,7 +66,7 @@ body {
 	z-index: 1;
 	width: 100%;
 	height: 100%;
-	max-height: 2517px;
+	max-height: 58%;
 	&__container {
 		height: 100%;
 	}
@@ -68,14 +75,18 @@ body {
 		width: 100%;
 		height: 100%;
 		background: linear-gradient(180deg, #F5F5F5 0%, rgba(245, 245, 245, 0) 70.67%);
-		filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	}
 }
 
-[class*="__next"]:not(.swiper-button-disabled) {
-	cursor: pointer;
+@media only screen and (min-width: 340.98px) {
+	.background {
+		&__color {
+			box-shadow: none;
+		}
+	}
 }
 
-[class*="__prev"]:not(.swiper-button-disabled) {
-	cursor: pointer;
+[class*="__content"] {
+	padding: 0 16px 0 12px;
 }
