--- a/src/style/terms.scss
+++ b/src/style/terms.scss
@@ -1,52 +1,36 @@
 .terms {
-	margin-top: 30px;
+	margin-top: 45px;
+	&__container {
+		opacity: 0;
+		transform: scale(0) translate(-100%);
+	}
 	&__swiper {
 		&> .swiper-wrapper > .swiper-slide {
 			height: auto;
 		}
 	}
 	&__card {
-		padding: 29px 38px;
+		padding: 29px 38px 40px 38px;
 		background: #FFFFFF;
 		border: 0.930288px solid rgba(136, 140, 140, 0.4);
 		border-radius: 27.9087px;
 		height: 100%;
 		max-width: 290px;
 		margin: 0 auto;
-		transition: all 0.3s ease 0s;
-		& > .terms__title {
-			transition: color 0.3s ease 0s;
-		}
-		& > .terms__img > path {
-			transition: fill 0.3s ease 0s;
-		}
-		&:hover {
-			background: #00AEC7;
-			box-shadow: 0px 4px 7px rgba(0, 58, 64, 0.2);
-			& > .terms__title {
-			color: #FFFFFF;
-			}
-			& > .terms__img > path {
-				fill: #FFFFFF;
-			}
-			color: #FFFFFF;
-		}
+		cursor: default;
 	}
 	&__img {
 		width: 65px;
 		height: 65px;
 	}
 	&__title {
-		margin-top: 11px;
+		margin-top: 7px;
 		font-size: 22px;
 		font-weight: 700;
 		color: #000000;
 	}
 	&__text {
 		margin-top: 10px;
-	}
-	&__swiper-pagination {
-		width: auto !important;
 	}
 	&__items {
 		display: none;
@@ -58,7 +42,7 @@
 		display: none;
 	}
 	&__controls {
-		margin-top: 21px;
+		margin-top: 20px;
 		display: flex;
 		justify-content: center;
 		gap: 48px;
@@ -69,32 +53,62 @@
 	.terms {
 		&__prev {
 			display: block;
-			&.swiper-button-disabled > svg {
-				fill-opacity: 0.3;
-			}
 		}
 		&__next {
 			display: block;
-			&.swiper-button-disabled > svg {
-				fill-opacity: 0.3;
-			}
 		}	
-	}
-}
-@media only screen and (min-width: 1279px) {
-	.terms {
-		position: relative;
-		z-index: 2;
 		&__swiper {
 			display: none;
 		}
 		&__items {
 			display: flex;
-
+			justify-content: center;
+			flex-wrap: wrap;
+			gap: 30px;
 		}
 		&__card {
 			height: auto;
+			margin: 0;
+			width: 290px;
+			transition: all 0.8s ease 0s;
+			& > .terms__title {
+				transition: color 0.8s ease 0s;
+			}
+			& > .terms__img >  [id*="terms__card_"] {
+				transition: fill 0.8s ease 0s;
+			}
+			&:hover {
+				background: #00AEC7;
+				box-shadow: 0px 4px 7px rgba(0, 58, 64, 0.2);
+				& > .terms__title {
+				color: #FFFFFF;
+				}
+				& > .terms__img > [id*="terms__card_"] {
+					fill: #FFFFFF;
+				}
+				color: #FFFFFF;
+			}
+		}
+	}
+}
+@media only screen and (min-width: 1299px) {
+	.terms {
+		position: relative;
+		z-index: 2;
+		&__card {
+			height: auto;
+			margin: 0;
+			padding: 29px 38px 40px 41px;
+		}
+		&__title {
+			margin-top: 14px;
+		}
+		&__items {
 			gap: 30px;
+			flex-wrap: nowrap;
+		}
+		&__card {
+			width: auto;
 		}
 	}
 }
