--- a/src/style/swiper.scss
+++ b/src/style/swiper.scss
@@ -1,3 +1,26 @@
+.swiper-wrapper {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	transition-property: transform;
+	box-sizing: border-box;
+}
+.swiper-pointer-events {
+	touch-action: pan-y;
+	&.swiper-vertical {
+		touch-action: pan-x;
+	}
+}
+.swiper-slide {
+	flex-shrink: 0;
+	width: 100%;
+	height: 100%;
+	transition-property: transform;
+}
+.swiper-slide-invisible-blank {
+	visibility: hidden;
+}
+
 .swiper-pagination-bullet {
 	background: #fff;
 	border: 0.718182px solid rgba(44, 62, 80, 0.3);
@@ -18,6 +41,10 @@
 	display: flex;
 	justify-content: center;
 	gap: 8.8px;
+}
+
+[class*="__swiper"] {
+	overflow: hidden;
 }
 
 @media only screen and (min-width: 991.98px) {
